--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
     <section>
         <figure>
-            <video src="/material/Joji - Glimpse of Us (Official Video).mp4" poster="/material/joji.jpg" controls></video>
+            <video src="/material/Joji- glimpse of you.mp4" poster="/material/joji.jpg" controls></video>
             <figcaption>
                 <h1>Joji - Glimpse of Us (Official Video)</h1>
                 <a href="">Joji</a>
@@ -80,7 +80,7 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/SIAMÉS 'Mr. FEAR' [Official Animated Music Video].mp4" poster="/material/siames.png" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/EKLWC93nvAU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>SIAMÉS - Mr. FEAR [Official Animated Music Video]</h1>
                 <a href="">SIAMÉS</a>
@@ -88,7 +88,7 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/The best books for boys (ages 13 to 19).mp4" poster="/material/radu.png" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/3lWp8d4KMto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>The best books for boys (ages 13 to 19)</h1>
                 <a href="">Radu Dumitrescu</a>
@@ -96,7 +96,7 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/a fresh new web framework is out.mp4" poster="/material/fireship.jpg" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/4boXExbbGCk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>a fresh new web framework is out</h1>
                 <a href="">Fireship</a>
@@ -104,7 +104,7 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/tomar notas.mp4" poster="/material/productividad.png" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/2rV13AhSHgs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>📄 Tomar Notas de esta forma me ha Cambiado la Vida</h1>
                 <a href="">Productividad con Ruben Loan</a>
@@ -112,7 +112,7 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/Why Mechanical Keyboards_.mp4" poster="/material/taeha.png" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/Qr3nYR15wxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>Why Mechanical Keyboards</h1>
                 <a href="">Taeha Types</a>
@@ -120,7 +120,7 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/Charlie Puth - That's Hilarious [Official Video].mp4" poster="/material/charlie.png" controls></video>
+            <video src="/material/charlie puth.mp4" poster="/material/charlie.png" controls></video>
             <figcaption>
                 <h1>Charlie Puth - That's Hilariuos [Official Video]</h1>
                 <a href="">Charlie Puth</a>
@@ -128,15 +128,15 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/CSS em and rem explained #CSS #responsive.mp4" poster="/material/kevin.png" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/_-aDOAMmDHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>Css em and rem explained #CSS #responsive</h1>
                 <a href="">Kevin</a>
                 <p>254,088 vistas • hace 5 años</p>
             </figcaption>
         </figure>
-        <!-- <figure>
-            <video src="/material/¿Cómo funciona un PORTÁTIL por DENTRO_ Cada componente EXPLICADO.mp4" poster="/material/nate.png" controls></video>
+        <figure>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/bBtM98Jfu7Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>¿Cómo funciona un PORTÁTIL por DENTRO? Cada componente EXPLICADO</h1>
                 <a href="">Nate Gentile</a>
@@ -144,7 +144,7 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/Glimpse of Us - Joji (Cover) by Alice Kristiansen.mp4" poster="/material/alice.png" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/XXxWF3vptFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>Glimpse of Us - Joji (Cover) by Alice Kristiansen</h1>
                 <a href="">Alice Kristiansen</a>
@@ -152,7 +152,7 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/Dunk Souls III.mp4" poster="/material/donkey.png" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/lN-rVlMIJZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>Dunk Souls III</h1>
                 <a href="">videogamedunkey</a>
@@ -160,12 +160,12 @@
             </figcaption>
         </figure>
         <figure>
-            <video src="/material/Elden Ring's Lore ► Explained!.mp4" poster="/material/vati.png" controls></video>
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/DYDs_Inzkz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <figcaption>
                 <h1>Elden Ring's Lore ► Explained!</h1>
                 <a href="">VaatiVidya</a>
                 <p>5,816,753 vistas • hace 3 meses</p>
-            </figcaption> -->
+            </figcaption>
         </figure>
     </section>
 </body>
